Add EqualOpportunities member and wire up Domain Event handlers
