# Synonms.Structur.Api.Core/ValueObjects/Enumerations/SexEnumeration.cs
@@ -1,0 +1,8 @@
+namespace Synonms.Structur.Api.Core.ValueObjects.Enumerations;
+
+public enum SexEnumeration
+{
+    Unknown = 0,
+    Male,	
+    Female
+}
